@@ -1,5 +1,11 @@
 2010-03-30  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* NEWS, configure.in, libmisc/copydir.c, man/useradd.8.xml,
+	man/usermod.8.xml, src/Makefile.am: Added support for ACLs and
+	Extended Attributes.
+
+2010-03-30  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* libmisc/copydir.c: Document the sections closed by #endif
 
 2010-03-27  Nicolas François  <nicolas.francois@centraliens.net>
